--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
