--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.18.0",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
