--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-tabs": "^6.0.2",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
