--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.5.2",
+    "framer-motion": "^10.16.4",
     "googleapis": "^39.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
